# bash-guard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.claude-plugin/: marketplace.json
.github/workflows/: check.yml  release.yml
plugins/bash-guard/.claude-plugin/: plugin.json
plugins/bash-guard/hooks/: hooks.json
plugins/bash-guard/lib/bash_guard/: __init__.py  policy.py
plugins/bash-guard/scripts/: bash-guard
plugins/bash-guard/tests/: test_policy.py
scripts/: package.sh
src/: main.rs  policy.rs
tests/: codex-registration.sh  hook.sh
