[package]
name = "bash-guard"
version = "0.1.3"
edition = "2024"
description = "Claude Code Bash Hook 的失败关闭权限检查器"
license = "MIT"
repository = "https://github.com/bash-agent/claude-bash-guard"

[dependencies]
once_cell = "1"
regex = "1"
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
